Refactor CD_Empleado and update resources
- Changed CD_Empleado class access level to public and updated file path initialization.
- Added Data folder in CapaDatos.csproj.
- Included new image resource in CapaPresentacion.csproj.
- Updated Resources.Designer.cs comments to English and added property for new image.
- Modified Resources.resx to update version numbers and schema requirements.
- Added binary file for the new image.
- Adjusted logo image and form size in SplashForm.Designer.cs to accommodate new resource.

--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="SalarioEmpleado.resx">
       <DependentUpon>SalarioEmpleado.cs</DependentUpon>
@@ -126,6 +127,9 @@
       <Project>{69404b03-a154-458d-8539-d7c79a6877f3}</Project>
       <Name>CapaNegocio</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp Image 2025-08-25 at 1.21.47 PM.jpeg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
