Add payroll management functionality and refactor code
Introduces `CD_Nomina` for payroll data handling and `CN_Nomina` for business logic. Updates `CN_Empleado` with deduction calculations. Modifies project files to include new classes and removes unused `Class1.cs`.

--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CD_Empleado.cs" />
+    <Compile Include="CD_Nomina.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
